--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -3,14 +3,25 @@
 <h2><font color="#ff0000"> <b>法令に違反する・抵触する恐れがあるもの<br>
 法令で譲渡・所持が規制されているもの</b> </font></h2>
 
-<font size="5" color="#ff0000" font-weight="bold">法令に違反する・抵触する恐れがあるもの<br>
+<font size="5" color="#ff0000" font-weight="bold">
+法令に違反する・抵触する恐れがあるもの<br>
 法令で譲渡・所持が規制されているもの<br>
-size5bold</font>
+size5bold
+</font>
 <br>
-<font size="4" color="#ff0000">法令に違反する・抵触する恐れがあるもの<br>
+<br>
+<span style="font: 16pt bold">
+法令に違反する・抵触する恐れがあるもの<br>
 法令で譲渡・所持が規制されているもの<br>
-size4</font>
+spanスタイルbold16pt
+</span>
 <br>
+<br>
+<div style="font: 16pt bold #ff0000">
+法令に違反する・抵触する恐れがあるもの<br>
+法令で譲渡・所持が規制されているもの<br>
+divスタイルbold16pt</div>
+
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
 法令違反に抵触する恐れのあるもの
 主に犯罪や違法行為に使用されるものや、使用されるとみなされるものの出品を禁止します。
@@ -21,7 +32,7 @@ size4</font>
 </div>
 <font color="#ff0000">銃刀法違反にあたるもの<br>
 武器類とみなされるもの</font>
-
+<br>
 <h3>■主な違反商品</h3>
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
 <ul>
