--- a/1.コネポケ公式ガイド/初めての方へ/5.安全な取引を行うために.md
+++ b/1.コネポケ公式ガイド/初めての方へ/5.安全な取引を行うために.md
@@ -1,7 +1,7 @@
 # 安全な取引を行うために
 <hr>
 
-<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<div style="padding: 7px 15px 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>安全に取引を行うための注意事項</b>
 </div>
 
@@ -15,7 +15,7 @@
 
 相手とのやり取りに<font color="#ff0000"> <b>「不安」「怪しい」</b> </font>と感じた場合は取引を中止しましょう。
 
-<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<div style="padding: 7px 15px 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>自宅や待ち合わせ場所で取引を行う場合</b>
 </div>
 
@@ -26,7 +26,7 @@
 - 携帯電話など、すぐに連絡がとれる通信機器を持参しましょう。<br>
 - 身の危険を感じた場合は、すぐに警察や身の回りの人に連絡しましょう。<br>
 
-<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<div style="padding: 7px 15px 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>配送で取引を行う場合</b>
 </div>
 
@@ -38,7 +38,7 @@
 - 梱包の仕方について<br>
 </div>
 
-<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<div style="padding: 7px 15px 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>禁止出品物のチェック</b>
 </div>
 コネポケでは24時間体制で禁止出品物のチェックをしています。
@@ -46,7 +46,7 @@
 コネポケ事務局の監視とユーザー様からの通報により、禁止出品物は発見次第削除しています。
 
 悪質な違法行為を行なったユーザーについては、アカウント停止の措置をとらせていただきます。
-<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<div style="padding: 7px 15px 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>捜査機関や公的機関との連携</b>
 </div>
 コネポケは犯罪防止のため捜査機関や公的機関に協力をしております。
