--- a/1.コネポケ公式ガイド/ルールとマナー/12.商品の取り扱いについて.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/12.商品の取り扱いについて.md
@@ -2,7 +2,7 @@
 <hr>
 無料で誰かにあげる物でも、引き取っていただける方が今後大切に使う商品です。
 
-<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<div style="padding: 7px 15px 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>以下の内容を必ずご確認ください。</b>
 </div>
 <ol>
