--- a/2.はじめてガイド/1.出品する/1.出品するには/2.出品時に気を付けること.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/2.出品時に気を付けること.md
@@ -23,26 +23,26 @@
 <b>【商品の詳細】</b>
 </div>
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
-<h3><b>カテゴリー</b></h3>
+<font size="4"><b>カテゴリー</b></font><br>
 コネポケでは、カテゴリー検索ができます。<br>
 適切なカテゴリーが選択されていないとカテゴリーを指定した検索で検索結果に表示されませんので、適切な商品カテゴリーの選択をお願いいたします。
 </div>
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
-<h3><b>商品の状態</b></h3>
+<font size="4"><b>商品の状態</b></font><br>
 商品の状態は適切に設定してください。
 </div>
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
-<h3><b>取引地域</b></h3>
+<font size="4"><b>取引地域</b></font><br>
 コネポケでは、エリア検索もできます。<br>
 エリアが選択されていないとエリアを指定した検索で検索結果に表示されませんので、適切なエリアの選択をお願いいたします。
 </div>
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
-<h3><b>引取り希望日</b></h3>
+<font size="4"><b>引取り希望日</b></font><br>
 商品を引き取って欲しい日数の目安を引き取りユーザー様に伝えるための情報です。
 </div>
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
-<h3><b>配送の可否</b></h3>
-直接引き取りにきていただく以外に、配送についての目安を引き取りユーザー様に伝えるための情報です<br> 
+<font size="4"><b>配送の可否</b></font><br>
+直接引き取りにきていただく以外に、配送についての目安を引き取りユーザー様に伝えるための情報です。<br> 
 ［配送可能］で出品する場合は、送料でのトラブルを防止するため、商品説明内に送料についての記載をすることをお勧めしております。
 </div>
 <hr>
