--- a/2.はじめてガイド/1.出品する/1.出品するには/4.画像や写真がアップロードできない.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/4.画像や写真がアップロードできない.md
@@ -9,15 +9,15 @@
 <br>
 <li>ご利用のアプリケーションが最新版でない場合、以下の手順にて最新版にアップデートしてください。
 </ol>
-<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
-■iosの場合
+<div style="padding: 3px 12px 3px 3px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<font size="4">■iosの場合</font>
 <ol>
 <li>「App Store」よりコネポケを検索</li>
 <br>
 <li>「アップデート」を選択</li>
 ※最新のバージョンをご利用されている場合「アップデート」は表示されません。
 </ol>
-■Androidの場合
+<font size="4">■Androidの場合</font>
 <ol>
 <li>「Playストア」よりコネポケを検索</li>
 <br>
