--- a/2.はじめてガイド/1.出品する/1.出品するには/5.出品商品を編集する・削除する.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/5.出品商品を編集する・削除する.md
@@ -6,7 +6,7 @@
 <h2>■iOS、Androidアプリをご利用の場合</h2>
 
 <h3>【編集する】</h3>
-<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<div style="padding: 3px 12px 3px 3px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
 <ol>
 <li>TOP画面左上の［三］を選択</li>
 <br>
@@ -33,14 +33,16 @@
 ### 【削除する】
 
 上記の(1)～(5)の手順で下書きに保存する
-<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
-⑹［下書き一覧］をタップ
+<div style="padding: 3px 12px 3px 3px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<ul>
+6.［下書き一覧］をタップ
 
-⑺下書き一覧ページより、削除したい投稿を左に向かってスライドする
+7.下書き一覧ページより、削除したい投稿を左に向かってスライドする
 
-⑻ゴミ箱アイコンが表示されるのでタップする
+8.ゴミ箱アイコンが表示されるのでタップする
 
-⑼「本当に削除してよろしいですか？」と表示されますので［削除］をタップすると削除できます。
+9.「本当に削除してよろしいですか？」と表示されますので［削除］をタップすると削除できます。
+</ul>
 </div>
 
 ## ■スマートフォンブラウザをご利用の場合
