--- a/2.はじめてガイド/1.出品する/1.出品するには/8.不具合が発生した時.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/8.不具合が発生した時.md
@@ -9,8 +9,8 @@
 2.ご利用のアプリケーションが最新版ではない可能性がございます。
 
 ご利用端末のOSをご確認のうえ、以下の手順にてアプリのアップデートをお願いいたします。  
-<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
-<h3>■iosの場合</h3>
+<div style="padding: 3px 12px 3px 3px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<font size="4">■iosの場合</font>
 <ol>
 <li>「App Store」よりコネポケを検索</li>
 <br>
@@ -18,8 +18,8 @@
 <font color="#ff0000">※最新のバージョンをご利用されている場合「アップデート」は表示されません。</font>
 </ol>
 </div>
-<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
-<h3>■Androidの場合</h3>
+<div style="padding: 3px 12px 3px 3px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<font size="4">■Androidの場合</font>
 <ol>
 <li>「Playストア」よりコネポケを検索</li>
 <br>
