--- a/2.はじめてガイド/1.出品する/1.出品するには/6.商品の状態について.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/6.商品の状態について.md
@@ -1,17 +1,21 @@
 # 商品の状態について
 <hr>
 「商品の状態」は、以下を目安に設定してください。
-
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 110%">
 ■新品・未使用  
+</div>
 未開封の新品、または購入から時間がたっていない一度も使用していない商品
-
-■目立った傷や汚れなし  
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 110%">
+■目立った傷や汚れなし
+</div>  
 よく見ないとわからない程度の傷や汚れがある
-
-■やや傷や汚れあり  
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 110%">
+■やや傷や汚れあり 
+</div> 
 中古とわかるレベルの傷や汚れがある
-
-■傷や汚れあり  
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 110%">
+■傷や汚れあり 
+</div> 
 誰がみてもわかるような大きな傷や汚れがある
 
 <font color="#ff0000">※掲載する商品画像は、実際に手元にある商品画像をご使用ください。
