--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -1,7 +1,27 @@
-# コネポケで禁止されている出品物
+<h1>コネポケで禁止されている出品物</h1>
 <hr>
 <h2><font color="#ff0000"> <b>法令に違反する・抵触する恐れがあるもの<br>
 法令で譲渡・所持が規制されているもの</b> </font></h2>
+
+<font size="5" color="#ff0000" font-weight="bold">
+法令に違反する・抵触する恐れがあるもの<br>
+法令で譲渡・所持が規制されているもの<br>
+size5bold
+</font>
+<br>
+<br>
+<span style="font: 16pt bold">
+法令に違反する・抵触する恐れがあるもの<br>
+法令で譲渡・所持が規制されているもの<br>
+spanスタイルbold16pt
+</span>
+<br>
+<br>
+<div style="font: 16pt bold #ff0000">
+法令に違反する・抵触する恐れがあるもの<br>
+法令で譲渡・所持が規制されているもの<br>
+divスタイルbold16pt</div>
+
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
 法令違反に抵触する恐れのあるもの
 主に犯罪や違法行為に使用されるものや、使用されるとみなされるものの出品を禁止します。
@@ -12,26 +32,31 @@
 </div>
 <font color="#ff0000">銃刀法違反にあたるもの<br>
 武器類とみなされるもの</font>
-
-### ■主な違反商品
-- 拳銃、猟銃、模造けん銃、けん銃部品、銃弾、砲弾、火縄銃などの古式銃砲 、 
-刀、ナイフ、包丁などで6cmを超えるもの
-
-- 違法改造物や殺傷能力のあるエアガン、モデルガン
-
+<br>
+<h3>■主な違反商品</h3>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>拳銃、猟銃、模造けん銃、けん銃部品、銃弾、砲弾、火縄銃などの古式銃砲 、 刀、ナイフ、包丁などで6cmを超えるもの </li>
+<br>
+<li>違法改造物や殺傷能力のあるエアガン、モデルガン </li>
+<br>
 上記の製造、並びに改造に関するデータ<br>
 <font color="#ff0000">※法律上の許可、登録などがあっても投稿不可</font>
-
+</ul>
+</div>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>薬物</b>
 </div>
 <font color="#ff0000">覚せい剤取締法、麻薬及び向精神薬取締法、あへん法、大麻取締法に違反するもの</font>
 
-### ■主な違反商品
-・麻薬、あへん、覚せい剤、向精神薬などの薬物、大麻草や芥子などの植物
-
-・毒物、劇物
-
+<h3>■主な違反商品</h3>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<ul>
+<li>麻薬、あへん、覚せい剤、向精神薬などの薬物、大麻草や芥子などの植物</li>
+<br>
+<li>毒物、劇物</li>
+</ul>
+</div>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>盗難品・不正入手</b>
 </div>
@@ -133,23 +158,25 @@
 
 ### ■主な違反商品
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
-
-- 全ての医薬品
-
-- 一般用医薬品
-
-- 要指導医薬品
-
-- 処方箋を要する医薬品などの医療用医薬品
-
-- 漢方薬
-
-- 動物用医薬品全般
-
-- 海外製の医薬品（個人輸入品を含む）
-
-- 医薬品に該当する成分が含まれている製品
+<ul>
+<li>全ての医薬品</li>
+<br>
+<li>一般用医薬品</li>
+<br>
+<li>要指導医薬品</li>
+<br>
+<li>処方箋を要する医薬品などの医療用医薬品</li>
+<br>
+<li>漢方薬</li>
+<br>
+<li>動物用医薬品全般</li>
+<br>
+<li>海外製の医薬品（個人輸入品を含む）</li>
+<br>
+<li>医薬品に該当する成分が含まれている製品</li>
+</ul>
 </div>
+
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #fffaf0;">
 ＜医療機器＞
 
@@ -183,7 +210,7 @@
 <b>許認可のない化粧品類や美容品</b>
 </div>
 
-<font color="#ff0000">許認可または手作りした化粧品類や美容品
+<font color="#ff0000">許認可または手作りした化粧品類や美容品
 </font>
 
 ### ■主な違反商品
@@ -206,25 +233,25 @@
 <b>
 人体、臓器、細胞、血液</b>
 </div>
-<font color="#ff0000">人体、臓器、細胞、血液またはそれに類するもの
-</font>
+<font color="#ff0000">人体、臓器、細胞、血液またはそれに類するもの
+</font>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>
 密猟された動植物、販売禁止鳥獣</b>
 </div>
-<font color="#ff0000">密猟された動植物、販売禁止鳥獣など
-</font>
+<font color="#ff0000">密猟された動植物、販売禁止鳥獣など
+</font>
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>法令に抵触する、悪用される恐れのあるもの</b>
 </div>
-<font color="#ff0000">危険物や安全性に問題があるもの
+<font color="#ff0000">危険物や安全性に問題があるもの
 
 犯罪に使用される恐れのあるもの
 
 人体に危険を及ぼす可能性があるもの
 
 法令に抵触する状態に改造を施したもの
-</font>
+</font>
 
 ### ■主な違反商品
 
@@ -279,10 +306,10 @@
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>食料品、飲料品、アルコール類</b>
 </div>
-<font color="#ff0000">食料品、飲料品、アルコール類で以下に該当するもの
+<font color="#ff0000">食料品、飲料品、アルコール類で以下に該当するもの
 
 出品時に賞味(消費)期限を商品説明に記載するか、記載部分の写真を掲載してください。
-</font>
+</font>
 ### ■主な違反商品
 
 ・保健所の許可なく製造・調理・加工・輸入・販売された食品（水道水など）
@@ -328,7 +355,8 @@
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>チケット類</b>
 </div>
-<font color="#ff0000">記名式チケットや、個人情報の登録のあるチケット
+
+<font color="#ff0000">記名式チケットや、個人情報の登録のあるチケット
 
 記名式の航空券
 
@@ -344,8 +372,9 @@
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>象牙および希少野生動植物種の個体</b>
 </div>
-<font color="#ff0000">象牙および希少野生動植物種の個体などのうち、種の保存法により必要とされている登録がないもの
-</font>
+
+<font color="#ff0000">象牙および希少野生動植物種の個体などのうち、種の保存法により必要とされている登録がないもの
+</font>
 
 ### ■主な違反商品
 
@@ -360,10 +389,11 @@
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>危険なもの</b>
 </div>
-<font color="#ff0000">発火性のあるもの
+
+<font color="#ff0000">発火性のあるもの
 
 武器として使用される恐れのあるもの
-</font>
+</font>
 
 ### ■主な違反商品
 
@@ -410,10 +440,10 @@
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>自己名義でない・所有者の変更登録ができない</b>
 </div>
-<font color="#ff0000">自己名義でないもの
+<font color="#ff0000">自己名義でないもの
 
 所有者の変更ができないまたは時間がかかるもの
-</font>
+</font>
 
 ### ■主な違反商品
 
@@ -426,13 +456,13 @@
 ・車、バイク、自転車、農業機械、船、ボート、ジェット、建設機械
 家、マンション、土地、田んぼ、畑、倉庫（登記している）
 <hr>
-<h2> <b> <font color="#ff0000">公序良俗、モラルに反するもの</font> </b></h2>
+<h2> <b> <font color="#ff0000">公序良俗、モラルに反するもの</font> </b></h2>
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>18禁、アダルト関連、児童ポルノ</b>
 </div>
-<font color="#ff0000">18禁、成人向けの商品や児童ポルノやそれに類するとみなされるもの
-</font>
+<font color="#ff0000">18禁、成人向けの商品や児童ポルノやそれに類するとみなされるもの
+</font>
 
 ### ■主な違反商品
 
@@ -546,12 +576,12 @@
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>物品ではないもの</b>
 </div>
-<font color="#ff0000">ゲームアカウントやゲーム内の通貨
+<font color="#ff0000">ゲームアカウントやゲーム内の通貨
 
 アイテムなどの電子データ
 
 情報、サービスの提供など
-</font>
+</font>
 
 ### ■主な違反商品
 
@@ -590,8 +620,9 @@ MLM(マルチレベルマーケティング)商品
 <b>福袋 (内包される商品の名称や写真がないもの)</b>
 </div>
 
-
 ### ■主な違反商品
+
+<h3>■主な違反商品 h3</h3>
 
 ・いくつかの商品の中から複数の商品をランダムで組み合わせ、セット内容が不透明な商品
 
@@ -602,16 +633,18 @@ MLM(マルチレベルマーケティング)商品
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>携帯電話端末について</b>
 </div>
-<font color="#ff0000">アクティベーションロックやネットワーク利用制限のかかった携帯端末
+<font color="#ff0000">アクティベーションロックやネットワーク利用制限のかかった携帯端末
 
 残債がある携帯端末、契約中の携帯端末
 
 出品に際しては、ご契約状況・入手経路やIMEI(端末識別番号)を証明する記載・掲載をするとともに、工場出荷状態に初期化した上で出品してください。
 
 残債がある、契約中である、名義を変更できないものは、トラブルの原因となるため、お取引をご遠慮ください。
-</font>
+</font>
 
 ### ■主な違反商品
+
+<h3>■主な違反商品 h3</h3>
 
 ・アクティベーションロックが解除されていないもの
 
@@ -645,6 +678,23 @@ MLM(マルチレベルマーケティング)商品
 ・KDDI：ネットワーク利用制限携帯電話機について
 </div>
 
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #fffaf0;">
+（内海追加）<br>
+※ソフトバンクモバイル株式会社（以下、ソフトバンクモバイル）および株式会社エヌ・ティ・ティ・ドコモ（以下、ドコモ）が販売する携帯電話機を出品する際は製造番号を問い合わせユーザー様に開示してください。（投稿内に製造番号を記載する必要はございません。）<br>
+<br>
+＜下記のご案内をしています＞<br>
+携帯電話会社各社が提供するウェブサイト（詳細下記）において、製造番号を入力し、不正に入手された携帯電話機ではないことを確認したうえでの取引をお願いいたします。<br>
+<br>
+なお、製造番号が不明な場合は取引をお控えください。参考：携帯電話会社各社が提供するウェブサイト（以下のリンクは外部サイトとなります。）<br>
+<br>
+・ソフトバンクモバイル： ネットワーク利用制限携帯電話機について<br>
+　※携帯電話の場合はこちら<br>
+<br>
+・ドコモ： ドコモ ネットワーク利用制限携帯電話機確認サイト<br>
+<br>
+・KDDI：ネットワーク利用制限携帯電話機について
+</div>
+
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>事務局で不適切と判断されるもの</b>
 </div>
@@ -672,4 +722,17 @@ MLM(マルチレベルマーケティング)商品
 ・販売に際して法令で義務づけられている許認可や資格条件を満たしていない商品など規約に反する可能性のもの
 
 ・その他、コネポケが取扱いを不適切と判断したもの
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>事務局で不適切と判断されるもの</b>
+</div>
+<font color="#ff0000">以下にあたるものや、その他、事務局の判断により不適切とみなされる出品を発見した場合は、利用の制限や出品・投稿の削除をいたします。
+</font>
+<br>
+
+### ■主な違反商品
+
+・ハードウェアウォレット
+
+・その他、違法物全般
 <hr>
