--- a/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
+++ b/1.コネポケ公式ガイド/初めての方へ/2.利用料について.md
@@ -1,9 +1,11 @@
-# 利用料について
+<h3>利用料について</h3>
 <hr>
-<font color="#0000ff">［登録］［出品］［レスポンス］</font>のご利用は<font color="#ff0000"><b>無料</b></font>です。
+<font color="#0000ff">［登録］［出品］［レスポンス］</font>のご利用は<font color="#ff0000"><strong>無料</strong></font>です。
+
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>スタンダード会員（無料）</b>
+<strong>スタンダード会員（無料）</strong>
 </div>
+
 <ul>
 <li>商品を出品する</li>
 <li>出品商品を引き取る（お試し1回）</li>
@@ -12,17 +14,21 @@
 <li>出品商品・リクエスト商品へコメントで質問する</li>
 </ul>
 <hr>
+
 <font color="#ff0000">ただし、以下のサービスのご利用は有料会員のご登録をお願いいたします。</font>
+
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>プレミアム会員(月額350円)</b>
+<strong>プレミアム会員（月額350円）</strong>
 </div>
+
 プレミアム会員登録のご利用は<font color="#ff0000">月額350円</font>の<font color="#ff0000">プレミアム会員料</font>がかかります。
 <ul>
 <li>出品商品を無制限に引き取れる</li>
 <li>リクエストに対してレスポンスがあった商品を無制限に引き取れる</li>
 </ul>
+
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>店舗掲載登録(月額11,000円)</b>
+<strong>店舗掲載登録（月額11,000円）</strong>
 </div>
 
 店舗掲載登録のご利用は<font color="#ff0000">月額11,000円</font>の<font color="#ff0000">店舗掲載料</font>がかかります。
@@ -32,4 +38,4 @@
 <li>リクエストに対してレスポンスがあった商品を無制限に引き取れる</li>
 <li>利用ユーザー様が店舗情報を見て直接仕事を依頼</li>
 </ul>
-<hr>
+<hr>
