--- a/1.コネポケ公式ガイド/初めての方へ/1.取引の流れ.md
+++ b/1.コネポケ公式ガイド/初めての方へ/1.取引の流れ.md
@@ -1,3 +1,4 @@
-# 取引の流れ
+<f3>取引の流れ</h3>
+<hr>
 
-[取引の流れ](https://dl.dropboxusercontent.com/s/95kuog1ngpvn1x2/%E5%8F%96%E5%BC%95%E3%81%AE%E6%B5%81%E3%82%8C.jpg)
+![guide](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/guide1.png)
